Add some images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/hell.jpg" alt="hell">
     <ul>
         <li><a href="./recipes/burger.html">Bronco Burger</a></li>
         <li><a href="./recipes/sushi.html">Sushi</a></li>
