--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Bronco Burger</h1>
-    <img src="../images/pho.jpg" alt="pho">
+    <img src="../images/burger.jpg" alt="burger">
     <h3>Description</h3>
     <p>The manly man burger (not for wimps), great for NFL tailgating.</p>
 
