--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <img src="./images/hell.jpg" alt="hell">
+    <img src="./images/hell.jpg" alt="hell" width="600" height="600">
     <ul>
         <li><a href="./recipes/burger.html">Bronco Burger</a></li>
         <li><a href="./recipes/sushi.html">Sushi</a></li>
